# Auto-Classcard

./: .gitignore  README.md  cli.py  config.toml  env.py  main.py  pyproject.toml  requirements.txt  utility.py
learning_types/: matching_game.py  matching_game_API.py  memorization.py  quiz_battle.py  recall.py  spelling.py  test.py
src/: __init__.py  app.py  env.py  utility.py
