[project]
name = "Auto-Classcard"
version = "0.1.0"
description = "✨ Selenium을 활용한 Classcard 학습 자동화 입니다."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "selenium>=4.31.0",
    "toml>=0.10.2",
    "typer>=0.15.2",
]
